--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -55,7 +56,7 @@
                 </p>
             </article>
             <nav>
-                
+
             </nav>
         </main>
     </Section>
@@ -71,7 +72,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -97,10 +99,13 @@
                 </hgroup>
                 <article>
                     <p>
-                        My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I'm very passionate and
-                        dedicated to my work. With a strong commitment to excellence, I have acquired extensive knowledge to
+                        My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I'm very passionate
+                        and
+                        dedicated to my work. With a strong commitment to excellence, I have acquired extensive
+                        knowledge to
                         compete in the thriving software engineering industry. When it comes to my work, I approach each
-                        project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
+                        project with a unique blend of creativity,analytical thinking, and unwavering attention to
+                        detail.
                     </p>
                 </article>
                 <nav>
@@ -123,7 +128,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -176,21 +182,26 @@
                         <img src="assets/resources/images/computer (1).png" alt="computer icon" width="50">
                     </div>
                     <h3>Desktop Application Development</h3>
-                    <p>With a mastery of desktop application development, From concept to completion, I deliver exceptional applications that elevate user experiences and drive business growth.</p>
+                    <p>With a mastery of desktop application development, From concept to completion, I deliver
+                        exceptional applications that elevate user experiences and drive business growth.</p>
                 </div>
                 <div>
                     <div>
                         <img src="assets/resources/images/network.png" alt="network icon" width="50">
                     </div>
                     <h3>Web Application Development</h3>
-                    <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce platforms to custom web solutions, I deliver innovative applications that engage users and drive business success.</p>
+                    <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce
+                        platforms to custom web solutions, I deliver innovative applications that engage users and drive
+                        business success.</p>
                 </div>
                 <div>
                     <div>
                         <img src="assets/resources/images/pen.png" alt="pen icon" width="50">
                     </div>
                     <h3>Graphic Designing</h3>
-                    <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From brand identities to visual narratives, my innovative designs amplify brand presence and engage audiences with style.</p>
+                    <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From
+                        brand identities to visual narratives, my innovative designs amplify brand presence and engage
+                        audiences with style.</p>
                 </div>
             </section>
         </main>
@@ -208,7 +219,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -228,24 +240,29 @@
 
             <section>
                 <div>
-                    <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image" width="300">
+                    <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image"
+                        width="300">
                     <h4>Project Smart Inventory</h4>
                     <article>
-                        <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize purchasing, and improve inventory turnover for efficient business operations.</p>
+                        <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize
+                            purchasing, and improve inventory turnover for efficient business operations.</p>
                     </article>
                 </div>
                 <div>
                     <img src="assets/resources/images/featured-image.jpg" alt="project 2 image" width="300">
                     <h4>Project Data Analyzer</h4>
                     <article>
-                        <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics and intuitive visualizations to make data-driven decisions and uncover trends and opportunities</p>
+                        <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics and
+                            intuitive visualizations to make data-driven decisions and uncover trends and opportunities
+                        </p>
                     </article>
                 </div>
                 <div>
                     <img src="assets/resources/images/project.png" alt="project 3 image" width="300">
                     <h4>Project Event Planner</h4>
                     <article>
-                        <p>Simplify event planning with EventPlanner. From guest management to budget tracking, effortlessly organize and execute successful events with this versatile software.</p>
+                        <p>Simplify event planning with EventPlanner. From guest management to budget tracking,
+                            effortlessly organize and execute successful events with this versatile software.</p>
                     </article>
                 </div>
             </section>
@@ -264,7 +281,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -293,14 +311,16 @@
                 <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
                 <h4>Bug Fixing and Testing</h4>
                 <article>
-                    <p>Identify and fix bugs in a software application through thorough testing and effective solutions</p>
+                    <p>Identify and fix bugs in a software application through thorough testing and effective solutions
+                    </p>
                 </article>
             </div>
             <div>
                 <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
                 <h4>Software Documentation and Technical Writing</h4>
                 <article>
-                    <p>Create comprehensive software documentation, including user manuals and technical guides, with strong writing skills and attention to detail</p>
+                    <p>Create comprehensive software documentation, including user manuals and technical guides, with
+                        strong writing skills and attention to detail</p>
                 </article>
             </div>
         </main>
@@ -318,7 +338,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -340,7 +361,7 @@
                 <div>
                     <img src="assets/resources/images/homework-gb544ddc8f_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>G.C.E Ordinary  Level Examination (2017)</h5>
+                        <h5>G.C.E Ordinary Level Examination (2017)</h5>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
                     <div>
@@ -350,7 +371,7 @@
                 <div>
                     <img src="assets/resources/images/math-g89f39f0c4_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>G.C.E Advanced  Level Examination (2020)</h5>
+                        <h5>G.C.E Advanced Level Examination (2020)</h5>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
                     <div>
@@ -360,13 +381,14 @@
                 <div>
                     <img src="assets/resources/images/a-book-g139e543d7_640.jpg" alt="image" width="300">
                     <hgroup>
-                        <h5>Graduate Diploma 
+                        <h5>Graduate Diploma
                             in Software Engineering</h5>
                         <h6>Institute of Java Software
                             Engineering (2022-2024)</h6>
                     </hgroup>
                     <div>
-                        <img src="assets/resources/images/326351595_686971346552200_5455708532631235658_n-removebg-preview.png" alt="image" width="50">
+                        <img src="assets/resources/images/326351595_686971346552200_5455708532631235658_n-removebg-preview.png"
+                            alt="image" width="50">
                     </div>
                 </div>
             </section>
@@ -385,7 +407,8 @@
             </section>
             <section>
                 <div>
-                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;"
+                        width="200">
                 </div>
                 <nav>
                     <menu>
@@ -422,12 +445,21 @@
                 </div>
             </address>
             <aside>
-                <div></div>
-                <div></div>
-                <div></div>
-                <a href="email: duvinduthathsara@gmail.com">
-                    <p>Submit Message</p>
-                </a>
+                <fieldset>
+                    <legend>Contact</legend>
+                    <form action="">
+                        <div>
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div>
+                            <input type="text" placeholder="Email">
+                        </div>
+                        <div>
+                            <textarea name="" id="" cols="50" rows="5" placeholder="Message"></textarea>
+                        </div>
+                        <input type="button" value="Submit Message">
+                    </form>
+                </fieldset>
             </aside>
 
             <section>
