--- a/index.html
+++ b/index.html
@@ -449,13 +449,13 @@
                     <legend>Contact</legend>
                     <form action="">
                         <div>
-                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Name" required>
                         </div>
                         <div>
-                            <input type="text" placeholder="Email">
+                            <input type="text" placeholder="Email" required>
                         </div>
                         <div>
-                            <textarea name="" id="" cols="50" rows="5" placeholder="Message"></textarea>
+                            <textarea name="" id="" cols="50" rows="5" placeholder="Message" required></textarea>
                         </div>
                         <input type="button" value="Submit Message">
                     </form>
