assignment/case 1 modified

--- a/assignments/CSS/index.html
+++ b/assignments/CSS/index.html
@@ -159,15 +159,14 @@
         }
         .container {
             position: relative;
-            display: flex;
-            flex-direction: column;
-            height: 100vh; /* Adjust this value as needed */
+            height: 100vh; Adjust this value as needed
         }
     </style>
 </head>
 
 <body>
 
+   
     <section class="container">
         <section>
             <div></div>
@@ -226,8 +225,7 @@
             <div></div>
         </div>
     </section>
-   
-   
+    
 
 </body>
 
