--- a/assignments/CSS/index.html
+++ b/assignments/CSS/index.html
@@ -41,8 +41,8 @@
         }
         section>div:nth-child(5){
             background-color: white;
-            width: 150px;
-            height: 150px;
+            width: 10%;
+            height: 20%;
             position: absolute;
             margin: auto;
             right: 0%;
@@ -52,8 +52,8 @@
         }
         section>div:nth-child(5)>div{
             background-color: red;
-            width: 100px;
-            height: 100px;
+            width: 50%;
+            height: 50%;
             position: absolute;
             margin: auto;
             border-radius: 90px;
@@ -63,8 +63,8 @@
             top: 0%;
         }
         section>section>div:first-child{
-            width: 150px;
-            height: 150px;
+            width: 20%;
+            height: 40%;
             background-color: white;
             border-radius: 90px;
             margin: auto;
@@ -75,8 +75,8 @@
             top: 0%;
         }
         section>section>div:nth-child(2){
-            width: 50px;
-            height: 50px;
+            width: 6%;
+            height: 12%;
             background-color: red;
             margin: auto;
             position: absolute;
@@ -86,8 +86,8 @@
             top: 0%;
         }
         section>section:first-child>div:nth-child(3){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-bottom-right-radius: 90px;
@@ -95,8 +95,8 @@
             top: 0%;
         }
         section>section:nth-child(2)>div:nth-child(3){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-bottom-left-radius: 90px;
@@ -104,8 +104,8 @@
             top: 0%;
         }
         section>section:nth-child(3)>div:nth-child(3){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-top-right-radius: 90px;
@@ -113,8 +113,8 @@
             bottom: 0%;
         }
         section>section:nth-child(4)>div:nth-child(3){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-top-left-radius: 90px;
@@ -122,8 +122,8 @@
             bottom: 0%;
         }
         section>section:first-child>div:nth-child(4){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-bottom-left-radius: 90px;
@@ -131,8 +131,8 @@
             top: 0%;
         }
         section>section:nth-child(2)>div:nth-child(4){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-bottom-right-radius: 90px;
@@ -140,8 +140,8 @@
             top: 0%;
         }
         section>section:nth-child(3)>div:nth-child(4){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-top-left-radius: 90px;
@@ -149,8 +149,8 @@
             bottom: 0%;
         }
         section>section:nth-child(4)>div:nth-child(4){
-            width: 80px;
-            height: 80px;
+            width: 10%;
+            height: 20%;
             background-color: white;
             position: absolute;
             border-top-right-radius: 90px;
@@ -159,7 +159,7 @@
         }
         .container {
             position: relative;
-            height: 100vh; Adjust this value as needed
+            height: 100vh;
         }
     </style>
 </head>
