--- a/assignments/CSS/Case 1/index.html
+++ b/assignments/CSS/Case 1/index.html
@@ -160,6 +160,7 @@
         .container {
             position: relative;
             height: 100vh;
+            width: 100vw;
         }
     </style>
 </head>
