--- a/assignments/CSS/Case 2/index.html
+++ b/assignments/CSS/Case 2/index.html
@@ -87,10 +87,14 @@
         main>section:nth-child(2) {
             position: relative;
             inset-inline-start: 21vw;
+            border-top: 5px solid black;
+            width: 80%;
+            left: 20%;
         }
 
         main>section:nth-child(2)>section:nth-child(2) {
             padding-bottom: 10px;
+            padding-left: 10px;
         }
 
         main>section:nth-child(2)>section:nth-child(2)>p {
@@ -98,14 +102,11 @@
             font-family: 'Nunito Sans', sans-serif;
         }
 
-        main>section:nth-child(2) {
-            width: 78%;
-        }
-
         main>section:nth-child(2)>section:first-child {
             font-size: 0;
             padding-top: 6px;
             margin-bottom: 15px;
+            padding-left: 10px;
         }
 
         main>section:nth-child(2)>section:first-child>div {
@@ -137,12 +138,6 @@
         nav>ul {
             list-style: none;
         }
-
-        body>hr {
-            block-size: 5px;
-            background: black;
-            margin: 0;
-        }
     </style>
 </head>
 
@@ -163,7 +158,6 @@
             </nav>
         </section>
     </header>
-    <hr>
     <main>
         <section>
             <nav>
