--- a/assignments/CSS/Case 2/index.html
+++ b/assignments/CSS/Case 2/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="assets/stylesheets/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Poppins:wght@300&display=swap"
+        rel="stylesheet">
     <style>
         header {
             inline-size: 100%;
@@ -119,20 +120,20 @@
             width: 100%;
             border-bottom: 2px solid green;
             border-top: 2px solid rgb(154, 0, 0);
-            
+
         }
 
-        main>section:nth-child(2)>section:first-child>div:first-child>img{
-            border-left: 2px solid rgb(154, 0, 0);    
+        main>section:nth-child(2)>section:first-child>div:first-child>img {
+            border-left: 2px solid rgb(154, 0, 0);
         }
 
-        main>section:nth-child(2)>section:first-child>div:nth-child(2)>img{
-            border-left: 2px solid green;   
+        main>section:nth-child(2)>section:first-child>div:nth-child(2)>img {
+            border-left: 2px solid green;
         }
 
-        main>section:nth-child(2)>section:first-child>div:nth-child(3)>img{
-            border-right: 2px solid rgb(154, 0, 0);  
-            border-left: 2px solid green;  
+        main>section:nth-child(2)>section:first-child>div:nth-child(3)>img {
+            border-right: 2px solid rgb(154, 0, 0);
+            border-left: 2px solid green;
         }
 
         nav>ul {
@@ -207,6 +208,9 @@
                     eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
                     voluptate
                     mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis</p>
             </section>
         </section>
     </main>
