fixed some problems

--- a/assignments/CSS/Case 3/index.html
+++ b/assignments/CSS/Case 3/index.html
@@ -13,13 +13,17 @@
             position: relative;
         }
 
-        body>section:first-child {}
+        body>section:first-child {
+            z-index: 2;
+        }
 
-        body>section:nth-child(2) {}
+        body>section:nth-child(2) {
+            z-index: 1;
+        }
 
         body>section:nth-child(3) {}
 
-        body>section:first-child>div:first-child {
+        body>section:first-child>div:nth-child(2) {
             width: 250px;
             height: 250px;
             border-radius: 200px;
@@ -64,7 +68,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-        body>section:first-child>div:nth-child(2){
+        body>section:first-child>div:first-child{
             background-color: #943e7c;
         }
         body>section:nth-child(2)>div{
@@ -78,12 +82,12 @@
 
 <body>
     <section>
+        <div class="middle">
+            <h1>Hello</h1>
+        </div>
         <div>
             <div>
             </div>
-        </div>
-        <div class="middle">
-            <h1>Hello</h1>
         </div>
     </section>
     <section>
