added images to case 5

--- a/assignments/CSS/Case 5/index.html
+++ b/assignments/CSS/Case 5/index.html
@@ -17,6 +17,9 @@
         body>div{
             box-sizing: border-box;
             border: 1px solid black;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
         }
     body>div:first-child{
         background-color: red;
