added images to case 5

--- a/assignments/CSS/Case 5/index.html
+++ b/assignments/CSS/Case 5/index.html
@@ -7,61 +7,107 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="assets/stylesheets/normalize.css">
     <style>
-        body{
+        body {
             font-size: 0;
             display: grid;
-            grid-template-columns: repeat(4,1fr);
-            grid-template-rows: repeat(3,1fr);
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(3, 1fr);
             height: 100vh;
         }
-        body>div{
+
+        body>div {
             box-sizing: border-box;
             border: 1px solid black;
+        }
+
+        body>div:first-child {
+            background-color: red;
             background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
             background-position: center;
             background-size: cover;
         }
-    body>div:first-child{
-        background-color: red;
-    }
-    body>div:nth-child(2){
-        background-color: green;
-    }
-    body>div:nth-child(3){
-        background-color: orangered;
-    }
-    body>div:nth-child(4){
-        background-color: purple;
-    }
-    body>div:nth-child(5){
-        background-color: deeppink;
-    }
-    body>div:nth-child(6){
-        background-color: blue;
-    }
-    body>div:nth-child(7){
-        background-color: brown;
-    }
-    body>div:nth-child(8){
-        background-color: violet;
-    }
-    body>div:nth-child(9){
-        background-color: navy;
-    }
-    body>div:nth-child(10){
-        background-color: yellow;
-    }
-    body>div:nth-child(11){
-        background-color: cadetblue;
-    }
-    body>div:nth-child(12){
-        background-color: aqua;
-    }
+
+        body>div:nth-child(2) {
+            background-color: green;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(3) {
+            background-color: orangered;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(4) {
+            background-color: purple;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(5) {
+            background-color: deeppink;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(6) {
+            background-color: blue;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(7) {
+            background-color: brown;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(8) {
+            background-color: violet;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(9) {
+            background-color: navy;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(10) {
+            background-color: yellow;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(11) {
+            background-color: cadetblue;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
+
+        body>div:nth-child(12) {
+            background-color: aqua;
+            background: url(assets/images/clay-banks-u27Rrbs9Dwc-unsplash.jpg);
+            background-position: center;
+            background-size: cover;
+        }
     </style>
 </head>
 
 <body>
-   
+
     <div></div>
     <div></div>
     <div></div>
