--- a/assignments/CSS/Case 6/index.html
+++ b/assignments/CSS/Case 6/index.html
@@ -9,114 +9,84 @@
     <style>
         body {
             font-size: 0;
+            height: 100vh;
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-template-rows: repeat(3,1fr);
         }
 
         body>div {
-            box-sizing: border-box;
-            position: absolute;
-            display: inline-block;
+            /* box-sizing: border-box; */
             border: 1px solid black;
         }
 
         body>div:first-child {
-            background-color: red;
+            grid-column: 1/3;
+            grid-row: 1/2;
+            background: url(assets/images/mosaic2.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(2) {
-            background-color: green;
-            left: 50%;
+            background: url(assets/images/mosaic1.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(3) {
-            background-color: orangered;
-            width: 25%;
-            right: 0;
-            height: 100vh;
+            grid-column: 4/5;
+            grid-row: 1/4;
+            background: url(assets/images/picture3.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(4) {
-            background-color: purple;
-            margin-top: 33.3vh;
-            left: 0;
+            background: url(assets/images/mosaic1.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(5) {
-            background-color: deeppink;
-            margin-top: 33.3vh;
-            left: 25%;
+            background: url(assets/images/mosaic1.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(6) {
-            background-color: blue;
-            margin-top: 33.3vh;
-            left: 50%;
+            background: url(assets/images/mosaic1.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(7) {
-            background-color: brown;
-            margin-top: 66.6vh;
-            left: 0;
+            background: url(assets/images/mosaic1.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
         body>div:nth-child(8) {
-            background-color: navy;
-            margin-top: 66.6vh;
-            left: 25%;
+            grid-column: 2/4;
+            grid-row: 3/4;
+            background: url(assets/images/mosaic2.jpg);
+            background-position: center;
+            background-size: cover;
         }
 
-        .square {
-            width: 25%;
-            height: 33.3vh;
-        }
-
-        .square>img {
-            width: 100%;
-            height: 100%;
-        }
-
-        .hri-rec {
-            width: 50%;
-            height: 33.3vh;
-        }
-
-        .hri-rec>img {
-            width: 100%;
-            height: 100%;
-        }
-
-        body>div:nth-child(3)>img {
-            width: 100%;
-            height: 100%;
-        }
     </style>
 </head>
 
 <body>
 
-    <div class="hri-rec">
-        <img src="assets/images/mosaic2.jpg" alt="">
-    </div>
-    <div class="square">
-        <img src="assets/images/mosaic1.jpg" alt="">
-    </div>
-    <div>
-        <img src="assets/images/picture3.jpg" alt="">
-    </div>
-    <div class="square">
-        <img src="assets/images/mosaic1.jpg" alt="">
-    </div>
-    <div class="square">
-        <img src="assets/images/mosaic1.jpg" alt="">
-    </div>
-    <div class="square">
-        <img src="assets/images/mosaic1.jpg" alt="">
-    </div>
-    <div class="square">
-        <img src="assets/images/mosaic1.jpg" alt="">
-    </div>
-    <div class="hri-rec">
-        <img src="assets/images/mosaic2.jpg" alt="">
-    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 
 
 </body>
